@@ -1,6 +1,11 @@
+2006-09-02  Don Allingham  <don@gramps-project.org>
+	* src/DisplayTabs/_EventEmbedList.py: Don't override event type on
+	a drag-n-drop (bug #420)
+	* po/POTFILES.in: remove non-shipping modules
+
 2006-09-01  Brian Matherly  <brian@gramps-project.org>
-    * src/plugins/Calendar.py: fix filter typo
-    * src/plugins/WritePkg.py: don't set uid on Windows
+        * src/plugins/Calendar.py: fix filter typo
+        * src/plugins/WritePkg.py: don't set uid on Windows
 
 2006-09-01  Alex Roitman  <shura@gramps-project.org>
 	* src/GrampsDb/_DbUtils.py: Use normal addition: this updates
